--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html
+<!-- saved from url=(0039)http://fawe-mc.ru/console/?act=console -->
 <html><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <title>Fawe-MC (Консоль)</title>
 <script src="./js/jquery.min.js.Без названия"></script>
