--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html
 <!-- saved from url=(0039)http://fawe-mc.ru/console/?act=console -->
 <html><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-<title>Fawe-MC (Консоль)</title>
+<title>Fors-Craft (Консоль)</title>
 <link rel="shortcut icon" href="/images/favicon.ico" type="image/x-icon">
 <script src="./js/jquery.min.js.Без названия"></script>
 <script src="./js/jquery-ui.min.js.Без названия"></script>
