fawe-cmd.github.io

--- a/index.html
+++ b/index.html
@@ -260,12 +260,17 @@
     <br>
     <div class="member hideme"><img src="https://pp.userapi.com/c844416/v844416243/12ac87/8xT6n9ye63Y.jpg" class="memberphoto">
         <h3 class="membertitle">Дмитрий Тимофеев</h3>
-        <p>Должность: Кодер, Разработчик!</p>
+        <p>Должность: Спонсор/Ютубер/Тестер!</p>
         <div class="teamsocial"><a style="font-family: Roboto, sans-serif;" target="_blank" href="https://vk.com/fromshopadmi">Связаться</a></div><br>
 		<div class="member hideme"><img src="https://pp.userapi.com/c846418/v846418784/dfa9a/6BeDAwBSCIk.jpg?ava=1" class="memberphoto">
 		<h3 class="membertitle">Николай Коржиков</h3>
         <p>Должность: создатель сайта!</p>
         <div class="teamsocial"><a style="font-family: Roboto, sans-serif;" target="_blank" href="https://vk.com/kkorzhikov">Связаться</a></div><br>
+		<div class="member hideme"><img src="https://pp.userapi.com/c850128/v850128063/78b56/GIVQTSMcoOI.jpg" class="memberphoto">
+		<h3 class="membertitle">FurryVime - группа вк</h3>
+        <p>Должность: Кодеры!</p>
+        <div class="teamsocial"><a style="font-family: Roboto, sans-serif;" target="_blank" href="https://vk.com/furryvime">Связаться</a></div><br>
+		
 
     </div>
     </div>
