fawe-cmd.github.io

--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@
     <br>
     <div class="member hideme"><img src="https://pp.userapi.com/c844416/v844416243/12ac87/8xT6n9ye63Y.jpg" class="memberphoto">
         <h3 class="membertitle">Дмитрий Тимофеев</h3>
-        <p>Должность: Спонсор/Ютубер/Тестер!</p>
+        <p>Должность: Спонсор</p>
         <div class="teamsocial"><a style="font-family: Roboto, sans-serif;" target="_blank" href="https://vk.com/fromshopadmi">Связаться</a></div><br>
 		<div class="member hideme"><img src="https://pp.userapi.com/c846418/v846418784/dfa9a/6BeDAwBSCIk.jpg?ava=1" class="memberphoto">
 		<h3 class="membertitle">Николай Коржиков</h3>
